Implement market coin adapter

--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -33,6 +33,8 @@
     <color name="brave_wallet_dn_error_text_bg_color">#F0F2FF</color>
     <color name="brave_wallet_dn_highlight_bg_color">#FFFFFF</color>
     <color name="wallet_dn_bg_primary">#F8F9FA</color>
+    <color name="brave_wallet_day_night_bull">#FF2AC194</color>
+    <color name="brave_wallet_day_night_bear">#FFEE6374</color>
 
     <!-- Text colors -->
     <color name="brave_theme_subtitle_text">#868E96</color>
