--- a/android/java/res/values-night/brave_colors.xml
+++ b/android/java/res/values-night/brave_colors.xml
@@ -42,7 +42,7 @@
     <color name="brave_wallet_day_night_icon_color">#C2C4CF</color>
     <color name="brave_wallet_day_night_negative_ripple_color">#272733</color>
     <color name="brave_wallet_dn_error_text_bg_color">#453e2d</color>
-    <color name="brave_wallet_dn_highlight_bg_color">#1E2029</color>
+    <color name="brave_wallet_dn_highlight_bg_color">#1F1F27</color>
     <color name="wallet_dn_bg_primary">#17171F</color>
 
     <!-- Text colors -->
