Add Android UI for forget by default feature.

--- a/android/java/res/xml/brave_privacy_preferences.xml
+++ b/android/java/res/xml/brave_privacy_preferences.xml
@@ -59,6 +59,11 @@
             android:summary="@string/fingerprint_language_switch_summary"
             android:defaultValue="false" />
         <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
+            android:key="forget_first_party_storage"
+            android:title="@string/brave_forget_first_party_storage_switch"
+            android:summary="@string/brave_forget_first_party_storage_summary"
+            android:defaultValue="false" />
+        <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
             android:key="de_amp"
             android:title="@string/de_amp_switch"
             android:summary="@string/de_amp_summary"
