- add progress bar - optimize flow

--- a/android/java/res/layout/fragment_transactions.xml
+++ b/android/java/res/layout/fragment_transactions.xml
@@ -47,6 +47,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/frag_tx_empty_label" />
 
+        <ProgressBar
+            android:id="@+id/frag_tx_pb"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="start|center_vertical"
+            android:indeterminateDrawable="@drawable/progress_indeterminate_orange"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
