--- a/android/java/res/layout/market_coin_list_item.xml
+++ b/android/java/res/layout/market_coin_list_item.xml
@@ -29,11 +29,8 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/BraveWalletTextView"
             android:id="@+id/coin_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/wallet_text_color"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_gravity="start"/>
@@ -57,18 +54,13 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/BraveWalletTextView"
             android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_gravity="end"
-            android:textColor="@color/wallet_text_color"/>
+            android:layout_gravity="end" />
 
         <TextView
+            style="@style/BraveWalletTextView"
             android:id="@+id/change_percentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
             android:textColor="@color/wallet_secondary_text_color"
             android:layout_gravity="end"/>
 
