Accessibility issues for Content labelling

--- a/android/java/res/layout/brave_rewards_onboarding_ac_layout.xml
+++ b/android/java/res/layout/brave_rewards_onboarding_ac_layout.xml
@@ -73,6 +73,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:stepSize="1.0"
+              android:contentDescription="@string/slider"
               android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
               app:trackColor="@color/rewards_onboarding_ac_slider_track_color"
               app:trackColorActive="@color/rewards_onboarding_ac_slider_active_track_color" />
