Fix Tipping conversion, editText hint, not enough warning

--- a/android/java/res/layout/tipping_banner_tipping_panel_inside_layout.xml
+++ b/android/java/res/layout/tipping_banner_tipping_panel_inside_layout.xml
@@ -224,11 +224,10 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
-        android:hint="@string/_5"
+        android:hint="@null"
         android:textSize="28sp"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
-        android:text="@string/_5"
         android:textColor="@color/rewards_panel_notification_text_color"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@id/currency1"
@@ -242,8 +241,6 @@
         android:layout_marginEnd="8dp"
         android:textSize="28sp"
         android:gravity="center"
-        android:importantForAutofill="no"
-        android:text="@string/_5"
         android:textColor="@color/rewards_panel_notification_text_color"
         app:layout_constraintEnd_toStartOf="@id/currency1"
         app:layout_constraintTop_toBottomOf="@id/tipChoiceCustom" />
