Minor UI tweaks

--- a/android/java/res/layout/activity_asset_detail.xml
+++ b/android/java/res/layout/activity_asset_detail.xml
@@ -356,6 +356,7 @@
                     style="@style/BraveWalletTextViewTitle"
                     android:id="@+id/rank"
                     android:layout_width="0dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:lines="1"
                     android:textColor="@color/wallet_secondary_text_color"
@@ -385,9 +386,9 @@
                     style="@style/BraveWalletTextViewTitle"
                     android:id="@+id/volume"
                     android:layout_width="0dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:lines="1"
-                    android:text="@string/volume_24_h"
                     android:textColor="@color/wallet_secondary_text_color"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/volume_label"
@@ -415,9 +416,9 @@
                     style="@style/BraveWalletTextViewTitle"
                     android:id="@+id/market_cap"
                     android:layout_width="0dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:lines="1"
-                    android:text="@string/market_cap"
                     android:textColor="@color/wallet_secondary_text_color"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/market_cap_label"
