--- a/android/java/res/layout/account_spinner_items.xml
+++ b/android/java/res/layout/account_spinner_items.xml
@@ -29,6 +29,7 @@
             android:id="@+id/account_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="2"
             android:textColor="@color/wallet_secondary_text_color"
             android:textSize="14sp"/>
 
@@ -36,6 +37,8 @@
             android:id="@+id/account_value_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="middle"
             android:textColor="@color/wallet_secondary_text_color"
             android:textSize="12sp"/>
 
