--- a/components/ai_chat_ui/stories/style.module.scss
+++ b/components/ai_chat_ui/stories/style.module.scss
@@ -4,8 +4,9 @@
 // you can obtain one at https://mozilla.org/MPL/2.0/.
 
 .container {
-  width: 350px;
-  height: 600px;
+  // width: 350px;
+  // height: 600px;
+  height: 100vh;
   border: 1px solid var(--leo-color-divider-subtle);
   font-family: Poppins, sans-serif;
   font-size: 14px;
