--- a/components/brave_news/browser/resources/internals.html
+++ b/components/brave_news/browser/resources/internals.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brave News Inspect</title>
+  <title>Brave News Internals</title>
   <link rel="stylesheet" href="chrome://resources/brave/css/reset.css">
   <link rel="stylesheet" href="chrome://resources/brave/fonts/poppins.css">
   <link rel="stylesheet" href="chrome://resources/brave/leo/css/variables.css">
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="/brave_news_inspect.bundle.js"></script>
+  <script src="/brave_news_internals.bundle.js"></script>
 </body>
 
 </html>
