--- a/components/brave_news/browser/resources/internals.html
+++ b/components/brave_news/browser/resources/internals.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html dir="$i18n{textdirection}">
 
 <head>
@@ -7,7 +7,9 @@
   <title>Brave News Internals</title>
   <link rel="stylesheet" href="chrome://resources/brave/css/reset.css">
   <link rel="stylesheet" href="chrome://resources/brave/fonts/poppins.css">
-  <link rel="stylesheet" href="chrome://resources/brave/leo/css/variables.css">
+  <link
+    rel="stylesheet"
+    href="chrome://resources/brave/leo/css/variables.css">
 </head>
 
 <body>
