--- a/android/java/res/layout/brave_wallet_add_custom_asset.xml
+++ b/android/java/res/layout/brave_wallet_add_custom_asset.xml
@@ -3,17 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/add_asset_dialog_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        style="@style/BraveWalletTextView"
+        android:layout_marginVertical="10dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:textColor="@color/wallet_text_color"
         android:textSize="18sp" />
 
     <View
@@ -21,16 +18,28 @@
         android:layout_height="1dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@color/wallet_text_color"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:background="@color/wallet_text_color" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/BraveWalletTextView"
         android:layout_marginStart="24dp"
-        android:textColor="@color/wallet_text_color"
-        android:text="@string/wallet_add_custom_asset_token_name"
-        android:textSize="14sp" />
+        android:text="@string/brave_wallet_select_network_title" />
+
+    <Spinner
+        android:id="@+id/network_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="26dp"
+        android:paddingVertical="2dp"
+        android:textColor="@color/brave_wallet_day_night_text_color" />
+
+    <TextView
+        style="@style/BraveWalletTextView"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/wallet_add_custom_asset_token_name" />
 
     <EditText
         android:id="@+id/token_name"
@@ -45,12 +54,9 @@
 
     <TextView
         android:id="@+id/token_contract_address_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/BraveWalletTextView"
         android:layout_marginStart="24dp"
-        android:textColor="@color/wallet_text_color"
-        android:text="@string/wallet_add_custom_asset_token_contract_address"
-        android:textSize="14sp" />
+        android:text="@string/wallet_add_custom_asset_token_contract_address" />
 
     <EditText
         android:id="@+id/token_contract_address"
@@ -64,12 +70,9 @@
         tools:ignore="LabelFor, Autofill" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/BraveWalletTextView"
         android:layout_marginStart="24dp"
-        android:textColor="@color/wallet_text_color"
-        android:text="@string/wallet_add_custom_asset_token_symbol"
-        android:textSize="14sp" />
+        android:text="@string/wallet_add_custom_asset_token_symbol" />
 
     <EditText
         android:id="@+id/token_symbol"
@@ -84,12 +87,9 @@
 
     <TextView
         android:id="@+id/token_decimals_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/BraveWalletTextView"
         android:layout_marginStart="24dp"
-        android:textColor="@color/wallet_text_color"
-        android:text="@string/wallet_add_custom_asset_decimals"
-        android:textSize="14sp" />
+        android:text="@string/wallet_add_custom_asset_decimals" />
 
     <EditText
         android:id="@+id/token_decimals"
@@ -112,12 +112,9 @@
         android:visibility="gone">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/BraveWalletTextView"
             android:layout_marginStart="24dp"
-            android:textColor="@color/wallet_text_color"
-            android:text="@string/wallet_add_custom_asset_token_id"
-            android:textSize="14sp" />
+            android:text="@string/wallet_add_custom_asset_token_id" />
 
         <EditText
             android:id="@+id/token_id"
@@ -134,41 +131,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginVertical="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cancel"
+            style="@style/BraveWalletButtonHollow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_weight = "1"
-            android:text="@string/cancel"
-            style="@style/BraveWalletButtonHollow" />
+            android:layout_weight="1"
+            android:text="@string/cancel" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/add"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:gravity="center"
-            android:layout_weight = "1"
+            android:layout_marginHorizontal="12dp"
+            android:layout_weight="1"
             android:background="@drawable/crypto_wallet_blue_button"
+            android:enabled="false"
+            android:gravity="center"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
             android:text="@string/wallet_add_custom_asset_add_button"
             android:textAllCaps="false"
-            android:textSize="16sp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:enabled="false"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"/>
+            android:textSize="16sp" />
 
     </LinearLayout>
 
